--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "headless-drupal",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple prototype with drupal backend made in Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Apoorv Mittal <apoorv@umd.edu>",
   "dependencies": {
     "gatsby": "^2.1.16",
+    "gatsby-cli": "^2.4.13",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-manifest": "^2.0.18",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.21",
     "gatsby-source-drupal": "^3.0.25",
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-sharp": "^2.1.14",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -36,5 +39,14 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.3.1",
+    "graphql": "^14.1.1",
+    "jquery": "^3.3.1",
+    "react-headroom": "^2.2.8",
+    "reactstrap": "^7.1.0",
+    "semantic-ui-react": "^0.85.0",
+    "slick-carousel": "^1.8.1"
   }
 }
