--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.1",
     "jquery": "^3.3.1",
+    "react-equalizer": "^1.3.0",
     "react-headroom": "^2.2.8",
     "reactstrap": "^8.0.0",
     "semantic-ui-react": "^0.86.0",
